--- a/BigSchool_NguyenPhuocSang/BigSchool_NguyenPhuocSang.csproj
+++ b/BigSchool_NguyenPhuocSang/BigSchool_NguyenPhuocSang.csproj
@@ -188,6 +188,10 @@
     <Compile Include="Migrations\202205300714095_PopulateCategoryTable.designer.cs">
       <DependentUpon>202205300714095_PopulateCategoryTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202206060652116_AddNameColumnToApplicationUser.cs" />
+    <Compile Include="Migrations\202206060652116_AddNameColumnToApplicationUser.designer.cs">
+      <DependentUpon>202206060652116_AddNameColumnToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -284,6 +288,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202205300714095_PopulateCategoryTable.resx">
       <DependentUpon>202205300714095_PopulateCategoryTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202206060652116_AddNameColumnToApplicationUser.resx">
+      <DependentUpon>202206060652116_AddNameColumnToApplicationUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
